[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/in_battle/in_battle.gd" type="Script" id=1]
[ext_resource path="res://scenes/custom_tile_map/custom_tile_map.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/camera/camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://interfaces/grid_lines/grid_lines.gd" type="Script" id=5]
[ext_resource path="res://interfaces/grid_lines/grid_lines_hover.gd" type="Script" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[node name="in_battle" type="Node2D"]
script = ExtResource( 1 )

[node name="custom_tile_map" parent="." instance=ExtResource( 2 )]

[node name="player" parent="." instance=ExtResource( 3 )]

[node name="camera" parent="." instance=ExtResource( 4 )]

[node name="GridLines" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="GridLinesHover" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
